[tool.poetry]
name = "textattackhmc22-23"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "textattackhmc22_23"}]

[tool.poetry.dependencies]
python = "3.7.1"
requests = "^2.28.1"
tabulate = "^0.8.10"
tf-models-official = "^2.10.0"
torchfile = "^0.1.0"
transformers = ">=4.21.0"
textattack = "^0.3.7"
nltk = "^3.7"
torch = ">=1.7.0,<1.8 || >1.8"
datasets = "2.4.0"
bert-score = ">=0.3.5"
editdistance = "^0.6.0"
flair = "^0.11.3"
filelock = "^3.8.0"
language-tool-python = "^2.7.1"
lemminflect = "^0.2.2"
lru-dict = "^1.1.8"
numpy = ">=1.21.0"
pandas = ">=1.0.1"
scipy = ">=1.4.1"
terminaltables = "^3.1.10"
tqdm = "^4.64.1"
word2number = "^1.1"
num2words = "^0.5.12"
more-itertools = "^8.14.0"
PySocks = ">=1.5.6,<1.5.7 || >1.5.7"
pinyin = "0.4.0"
jieba = "^0.42.1"
OpenHowNet = "^2.0"
pycld2 = "^0.41"
click = "<8.1.0"
stanza = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
