[tool.poetry]
name = "textattackhmc22-23"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "textattackhmc22_23"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.28.1"
tabulate = "^0.9.0"
torchfile = "^0.1.0"
transformers = "^4.23.1"
flair = "^0.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
