[tool.poetry]
name = "textattackhmc22-23"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "textattackhmc22_23"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flair = ">=0.11.3"
lru-dict = "^1.1.8"
nltk = "^3.7"
lemminflect = "^0.2.3"
pandas = ">=1.3.5"
bert-score = ">=0.3.5"
editdistance = "^0.6.0"
filelock = "^3.8.0"
language-tool-python = "^2.7.1"
datasets = "2.4.0"
numpy = ">=1.21.5"
scipy = ">=1.4.1"
torch = ">=1.7.0,!=1.8"
PySocks = "!=1.5.7,>=1.5.6"
pinyin = "==0.4.0"
click = "<8.1.0"
matplotlib = "==3.5.1"
requests = "==2.27.1"
scikit-learn = "==1.0.2"
tabulate = "==0.8.9"
torchfile = "==0.1.0"
transformers = "==4.16.2"
OpenHowNet = "^2.0"
jieba = "^0.42.1"
pycld2 = "^0.41"
terminaltables = "^3.1.10"
tqdm = "^4.64.1"
word2number = "^1.1"
num2words = "^0.5.12"
more-itertools = "^9.0.0"
tensorflow-text = ">=2.8.0,<2.9.0"
tf-models-official = "2.8.0"
stanza = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
